# UbiFormExampleIotSensor

./: .gitignore  CMakeLists.txt  Manifest.json  README.md  main.cpp
